--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-cadastro-pessoa></app-cadastro-pessoa>
+  <app-root></app-root>
 </body>
 </html>
